# olx-deal-finder

./: .dockerignore  .env.example  Dockerfile  README.md  TODO  openwebui_pipeline.py  pyproject.toml  server.py
.github/workflows/: release.yml
agent/: common.py  filter_listings.py  generate_response.py  generate_search_queries.py  graph.py  logging_config.py  parse_user_request.py  score_listings.py  search_for_listings.py  settings.py  utils.py
agent/olx/: __init__.py  http_client.py  models.py  search.py
